# trackastra

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  LICENSE  MANIFEST.in  README.md  TEST_TRAIN_EXTRAS_REPORT.md  ctcdata.md  improv.md  newfeats.md  pyproject.toml  setup.cfg  test_train_extras.py
.github/workflows/: python-package-conda.yml
.venv_test_train/: pyvenv.cfg
scripts/: TAP_aug_bacteria copy.yaml  TEST_RESULTS_CORE_DEPENDENCIES.md  cotrack3_aug_bacteria.yaml  dino_test.py  dinov2_aug_bacteria.yaml  example_config.yaml  example_pretrained_feats_config.yaml  napari_trackastra.py  predict.py  sam21_aug_bacteria.yaml  sam_aug_bacteria.yaml  test_core_imports.py  test_scaling.py  train.py  utils.py  vanvliet.yaml  wrfeat_aug_bacteria.yaml
scripts/configs/: biohub.yaml  biohub2.yaml  celegans.yaml  ctc2d.yaml  ctc2d_extra.yaml  ctc3d.yaml  deepcell.yaml  deepcell_old.yaml  demo3d.yaml  general2d_new.yaml  general3d.yaml  hela.yaml  kate.yaml  kate_single.yaml  synthetic.yaml  synthetic_test.yaml  test.yaml  vanvliet.yaml  vanvliet2.yaml
scripts/deepcell/: SAM_deepcell.yaml  cotracker3_deepcell.yaml  sam21_deepcell.yaml
scripts/eval/: benchmark.ipynb  compute_metrics.ipynb  metrics.py  metrics_utils.py
tests/: test_attn.py  test_augmentations.py  test_blockwise_batched.py  test_cli.py  test_data.py  test_datanew.py  test_features.py  test_inference.py  test_inference_api.py  test_io.py  test_matching.py  test_model.py  test_pretrained.py  test_sparse_attn.py  test_train.py
trackastra/: __init__.py  cli.py
trackastra/data/: __init__.py  _check_ctc.py  _compute_overlap.py  _legacy_data.py  augmentations.py  data.py  datanew.py  dataset.py  distributed.py  example_data.py  features.py  io.py  matching.py  pretrained_augmentations.py  pretrained_features.py  sampler.py  utils.py  wrfeat.py
trackastra/data/resources/: Fluo-N3DH-CHO_02_ERR_SEG.tif  Fluo_Hela_02_ERR_SEG.tif  trpL_150310-11_mask.tif
trackastra/model/: __init__.py  heads.py  model.py  model_api.py  model_parts.py  model_parts2.py  predict.py  pretrained.json  pretrained.py  rope.py  sparse_attn.py
trackastra/tracking/: __init__.py  ilp.py  track_graph.py  tracking.py  utils.py
trackastra/training/: __init__.py  callbacks.py  config.py  debug.py  lightning.py  losses.py  runtime.py  schedulers.py  tracking_validation.py
trackastra/utils/: __init__.py  utils.py
