[metadata]
name = trackastra
author = Benjamin Gallusser, Martin Weigert
author_email = bgallusser@gmail.com, marweigert@gmail.com
dynamic = ["version"]
license = BSD 3-Clause License
description = Tracking by Association with Transformers
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
install_requires =
    numpy
    matplotlib
    scipy
    pandas
    dask
    humanize
    configargparse
    tensorboard
    pyyaml
    numba
    scikit-image
    chardet
    lightning
    kornia>=0.7.0 # TODO remove old augs
    torch
    torchvision
    lz4
    imagecodecs>=2023.7.10
    wandb
    edt
    joblib
python_requires = >=3.10
include_package_data = True

[options.extras_require]
ilp =
    motile >= 0.3
dev =
    pytest
    ruff
    black
    mypy
    pre-commit
    twine
    build
test =
    pytest

[options.entry_points]
console_scripts =
    trackastra = trackastra.cli:cli
