[metadata]
name = trackastra
author = Benjamin Gallusser, Martin Weigert
author_email = bgallusser@gmail.com, marweigert@gmail.com
dynamic = ["version"]
license = BSD 3-Clause License
description = Tracking by Association with Transformers
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
install_requires =
    numpy
    scipy
    pandas
    scikit-image
    torch
    torchvision
    pyyaml
    edt
    joblib
    lz4
    imagecodecs>=2023.7.10
    chardet
    dask
    numba
    geff>=1
    tqdm
    requests
    psutil
    # zarr>=3  # Will need a python 3.11+ version
python_requires = >=3.10
include_package_data = True

[options.extras_require]
ilp =
    motile >= 0.3
dev =
    pytest
    ruff
    black
    mypy
    pre-commit
    twine
    build
train =
    lightning
    wandb
    tensorboard
    configargparse
    humanize
    matplotlib
    kornia>=0.7.0
    gitpython
all =
    trackastra[train,ilp,dev]
test =
    pytest
etultra =
    trackastra_pretrained_feats @ git+https://github.com/bentaculum/Trackastra-et-Ultra.git#egg=trackastra_pretrained_feats

[options.entry_points]
console_scripts =
    trackastra = trackastra.cli:cli
